--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  text-align: center;
+  text-align: left;
   color: #414141;
 }
 header .intro-text {
@@ -610,7 +610,7 @@ section#contact .text-danger {
 }
 footer {
   padding: 25px 0;
-  text-align: center;
+  text-align: left;
 }
 footer span.copyright {
   line-height: 40px;
@@ -755,7 +755,7 @@ body {
 }
 
 .row-bottom-media{
-    margin-top: 60px;
+    margin-top: 200px;
 }
 .col-md-13 {
   position: relative;
@@ -771,4 +771,8 @@ body {
   left: 50%;
   width: 310px;
   margin-left: -155px;
+}
+
+p.social a {
+  margin-left: 10px;
 }
